--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,31 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<!-- MAIN CONTAINER START -->
+<div class="container-scroller">
 
-{{outlet}}
+    <!-- HEADER START -->
+    {{app-header tagName="nav" class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row" userName=model.userName}}
+    <!-- HEADER END -->
+
+    <!-- INNER CONTAINER START -->
+    <div class="container-fluid page-body-wrapper">
+        <div class="row row-offcanvas row-offcanvas-right">
+
+            <!-- MENU START -->
+            {{app-menu tagName="nav" class="sidebar sidebar-offcanvas" id="sidebar" menuItems=model.menuItems}}
+            <!-- MENU end -->
+
+            <!-- CENTRAL SECTION WRAPPER START -->
+            <div class="content-wrapper">
+                {{outlet}}
+            </div>
+            <!-- CENTRAL SECTION WRAPPER END -->
+
+            <!-- FOOTER START -->
+            {{app-footer tagName="footer" class="footer" versionNumber=model.versionNumber}}
+            <!-- FOOTER END -->
+
+        </div>
+    </div>
+    <!-- INNER CONTAINER END -->
+
+</div>
+<!-- MAIN CONTAINER END -->
