--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,31 +1,31 @@
-<!-- MAIN CONTAINER START -->
+{{! MAIN CONTAINER START }}
 <div class="container-scroller">
 
-    <!-- HEADER START -->
+    {{! HEADER START }}
     {{app-header tagName="nav" class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row" userName=model.userName}}
-    <!-- HEADER END -->
+    {{! HEADER END }}
 
-    <!-- INNER CONTAINER START -->
+    {{! INNER CONTAINER START }}
     <div class="container-fluid page-body-wrapper">
         <div class="row row-offcanvas row-offcanvas-right">
 
-            <!-- MENU START -->
+            {{! MENU START }}
             {{app-menu tagName="nav" class="sidebar sidebar-offcanvas" id="sidebar" menuItems=model.menuItems}}
-            <!-- MENU end -->
+            {{! MENU end }}
 
-            <!-- CENTRAL SECTION WRAPPER START -->
+            {{! CENTRAL SECTION WRAPPER START }}
             <div class="content-wrapper">
                 {{outlet}}
             </div>
-            <!-- CENTRAL SECTION WRAPPER END -->
+            {{! CENTRAL SECTION WRAPPER END }}
 
-            <!-- FOOTER START -->
+            {{! FOOTER START }}
             {{app-footer tagName="footer" class="footer" versionNumber=model.versionNumber}}
-            <!-- FOOTER END -->
+            {{! FOOTER END }}
 
         </div>
     </div>
-    <!-- INNER CONTAINER END -->
+    {{! INNER CONTAINER END }}
 
 </div>
-<!-- MAIN CONTAINER END -->
+{{! MAIN CONTAINER END }}
