--- a/app/templates/buttons.hbs
+++ b/app/templates/buttons.hbs
@@ -3,7 +3,8 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Normal buttons</h4>
-                <p class="card-description">Use any of the available button classes to quickly create a styled button.
+                <p class="card-description">
+                    Use any of the available button classes to quickly create a styled button.
                 </p>
                 <div class="template-demo">
                     <button type="button" class="btn btn-primary btn-fw">Primary</button>
@@ -19,7 +20,8 @@
             </div>
             <div class="card-body">
                 <h4 class="card-title">Inverse buttons</h4>
-                <p class="card-description">Use any of the available button classes to quickly create a styled button.
+                <p class="card-description">
+                    Use any of the available button classes to quickly create a styled button.
                 </p>
                 <div class="template-demo">
                     <button type="button" class="btn btn-inverse-primary btn-fw">Primary</button>
@@ -39,7 +41,8 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Rounded buttons</h4>
-                <p class="card-description">Use any of the available button classes to quickly create a styled button.
+                <p class="card-description">
+                    Use any of the available button classes to quickly create a styled button.
                 </p>
                 <div class="template-demo">
                     <button type="button" class="btn btn-primary btn-rounded btn-fw">Primary</button>
@@ -55,7 +58,8 @@
             </div>
             <div class="card-body">
                 <h4 class="card-title">Inverse rounded buttons</h4>
-                <p class="card-description">Use any of the available button classes to quickly create a styled button.
+                <p class="card-description">
+                    Use any of the available button classes to quickly create a styled button.
                 </p>
                 <div class="template-demo">
                     <button type="button" class="btn btn-inverse-primary btn-rounded btn-fw">Primary</button>
@@ -75,7 +79,8 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Default buttons</h4>
-                <p class="card-description">Use any of the available button classes to quickly create a styled button.
+                <p class="card-description">
+                    Use any of the available button classes to quickly create a styled button.
                 </p>
                 <div class="template-demo">
                     <button type="button" class="btn btn-primary">Primary</button>
@@ -123,12 +128,12 @@
             <div class="card-body">
                 <h4 class="card-title">Icon buttons</h4>
                 <div class="template-demo">
-                    <button type="button" class="btn btn-success"><i class="mdi mdi-cloud-download"></i>Upload</button>
-                    <button type="button" class="btn btn-warning"><i class="mdi mdi-message-text"></i>Comments</button>
-                    <button type="button" class="btn btn-danger"><i class="mdi mdi-upload"></i>Upload</button>
-                    <button type="button" class="btn btn-info"><i class="mdi mdi-delete"></i>Delete</button>
-                    <button type="button" class="btn btn-primary"><i class="mdi mdi-printer"></i>Print</button>
-                    <button type="button" class="btn btn-success"><i class="mdi mdi-loop"></i>Reset</button>
+                    <button type="button" class="btn btn-success">{{fa-icon "download"}} Upload</button>
+                    <button type="button" class="btn btn-warning">{{fa-icon "comment"}} Comments</button>
+                    <button type="button" class="btn btn-danger">{{fa-icon "upload"}} Upload</button>
+                    <button type="button" class="btn btn-info">{{fa-icon "times"}} Delete</button>
+                    <button type="button" class="btn btn-primary">{{fa-icon "print"}} Print</button>
+                    <button type="button" class="btn btn-success">{{fa-icon "undo"}} Reset</button>
                 </div>
             </div>
         </div>
