--- a/app/templates/typography.hbs
+++ b/app/templates/typography.hbs
@@ -145,14 +145,18 @@
                     Wrap content inside<code>&lt;blockquote class="blockquote"&gt;</code>
                 </p>
                 <blockquote class="blockquote">
-                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                        ante.</p>
+                    <p class="mb-0">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                    </p>
                 </blockquote>
             </div>
             <div class="card-body">
                 <blockquote class="blockquote blockquote-primary">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                    </p>
+                    <footer class="blockquote-footer">
+                        Someone famous in <cite title="Source Title">Source Title</cite>
                     </footer>
                 </blockquote>
             </div>
@@ -242,7 +246,8 @@
                 <div class="media">
                     <i class="mdi mdi-earth icon-md text-info d-flex align-self-start mr-3"></i>
                     <div class="media-body">
-                        <p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
+                        <p class="card-text">
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
                         </p>
                     </div>
                 </div>
@@ -256,7 +261,8 @@
                 <div class="media">
                     <i class="mdi mdi-earth icon-md text-info d-flex align-self-center mr-3"></i>
                     <div class="media-body">
-                        <p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
+                        <p class="card-text">
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
                         </p>
                     </div>
                 </div>
@@ -270,7 +276,8 @@
                 <div class="media">
                     <i class="mdi mdi-earth icon-md text-info d-flex align-self-end mr-3"></i>
                     <div class="media-body">
-                        <p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
+                        <p class="card-text">
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
                         </p>
                     </div>
                 </div>
@@ -344,9 +351,11 @@
                     Wrap in <code>&lt;u&gt;</code> tag for underline
                 </p>
                 <p>
-                    <u>lorem ipsum dolor sit amet, consectetur
+                    <u>
+                        lorem ipsum dolor sit amet, consectetur
                         mod tempor incididunt ut labore et dolore
-                        magna aliqua.</u>
+                        magna aliqua.
+                    </u>
                 </p>
             </div>
             <div class="card-body">
