--- a/app/templates/typography.hbs
+++ b/app/templates/typography.hbs
@@ -244,7 +244,7 @@
             <div class="card-body">
                 <h4 class="card-title">Top aligned media</h4>
                 <div class="media">
-                    <i class="mdi mdi-earth icon-md text-info d-flex align-self-start mr-3"></i>
+                    {{fa-icon "globe-americas" class="icon-md text-info d-flex align-self-start mr-3"}}
                     <div class="media-body">
                         <p class="card-text">
                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
@@ -259,7 +259,7 @@
             <div class="card-body">
                 <h4 class="card-title">Center aligned media</h4>
                 <div class="media">
-                    <i class="mdi mdi-earth icon-md text-info d-flex align-self-center mr-3"></i>
+                    {{fa-icon "globe-americas" class="icon-md text-info d-flex align-self-center mr-3"}}
                     <div class="media-body">
                         <p class="card-text">
                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
@@ -274,7 +274,7 @@
             <div class="card-body">
                 <h4 class="card-title">Bottom aligned media</h4>
                 <div class="media">
-                    <i class="mdi mdi-earth icon-md text-info d-flex align-self-end mr-3"></i>
+                    {{fa-icon "globe-americas" class="icon-md text-info d-flex align-self-end mr-3"}}
                     <div class="media-body">
                         <p class="card-text">
                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.
